# object-detection-opencv-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  download_v11_l.sh  download_v11_n.sh  download_v11_s.sh  download_v3.sh  download_v3_tiny.sh  download_v4.sh  download_v7.sh  download_v7_tiny.sh  download_v8_m.sh  download_v8_n.sh  download_v8_s.sh  download_v9_t.sh
examples/: yolo_v11_l.rs  yolo_v11_l_ort.rs  yolo_v11_l_ort_cuda.rs  yolo_v11_m.rs  yolo_v11_m_ort.rs  yolo_v11_m_ort_cuda.rs  yolo_v11_n.rs  yolo_v11_n_ort.rs  yolo_v11_n_ort_cuda.rs  yolo_v11_n_tensorrt.rs  yolo_v11_s.rs  yolo_v11_s_ort.rs  yolo_v11_s_ort_cuda.rs  yolo_v11_x.rs  yolo_v11_x_ort.rs  yolo_v11_x_ort_cuda.rs  yolo_v3.rs  yolo_v3_d2o_v8_ort.rs  yolo_v3_tiny.rs  yolo_v3_tiny_d2o_v8_opencv.rs  yolo_v3_tiny_d2o_v8_ort.rs  yolo_v4.rs  yolo_v4_d2o_v8_ort.rs  yolo_v4_tiny.rs  yolo_v4_tiny_d2o_v5_ort.rs  yolo_v4_tiny_d2o_v8_opencv.rs  yolo_v4_tiny_d2o_v8_ort.rs  yolo_v4_tiny_d2o_v8_tensorrt.rs  yolo_v4_tiny_onnx.rs  yolo_v5_n.rs  yolo_v5_n_ort.rs  yolo_v5u_n.rs  yolo_v5u_n_ort.rs  yolo_v7.rs  yolo_v7_d2o_v8_ort.rs  yolo_v7_tiny.rs  yolo_v7_tiny_d2o_v8_opencv.rs  yolo_v7_tiny_d2o_v8_ort.rs  yolo_v8_l.rs  yolo_v8_l_ort.rs  (+36 more)
scripts/: download_v11_m.sh  download_v11_x.sh  download_v4_tiny.sh  download_v5_l.sh  download_v5_m.sh  download_v5_n.sh  download_v5_s.sh  download_v5_x.sh  download_v5u_l.sh  download_v5u_m.sh  download_v5u_n.sh  download_v5u_s.sh  download_v5u_x.sh  download_v8_l.sh  download_v8_n.sh  download_v8_x.sh  download_v9_c.sh  download_v9_e.sh  download_v9_m.sh  download_v9_s.sh
src/: bbox.rs  bin.rs  dnn_backend.rs  face_detection.rs  image_buffer.rs  lib.rs  model.rs  model_classic.rs  model_factory.rs  model_format.rs  model_trait.rs  model_ultralytics.rs  opencv_compat.rs  postprocess.rs  preprocessing.rs  utils.rs
src/backend_opencv/: mod.rs  model.rs  model_classic.rs  model_format.rs  model_ultralytics.rs  model_yolov5.rs  model_yunet.rs  utils.rs
src/backend_ort/: mod.rs  model_ultralytics.rs  model_yolov5.rs  model_yunet.rs
src/backend_rknn/: mod.rs  model_ultralytics.rs  model_yunet.rs
src/backend_tensorrt/: mod.rs  model_ultralytics.rs  model_yunet.rs
